--- a/frontend/assets/css/main-customize.css
+++ b/frontend/assets/css/main-customize.css
@@ -1,9 +1,9 @@
-.page-enter-active,
-.page-leave-active {
+.fade-enter-active,
+.fade-leave-active {
     transition: opacity .5s ease;
 }
 
-.page-enter,
-.page-leave-to {
+.fade-enter,
+.fade-leave-to {
     opacity: 0;
 }
